--- a/src/shared/prerendered-app/Intro/style.css
+++ b/src/shared/prerendered-app/Intro/style.css
@@ -7,6 +7,7 @@
   grid-template-rows: 1fr max-content max-content;
   font-size: 1.2rem;
   color: var(--dim-text);
+  direction: rtl;
 }
 
 .blob-canvas {
