--- a/src/shared/prerendered-app/colors.css
+++ b/src/shared/prerendered-app/colors.css
@@ -1,6 +1,8 @@
 html {
   --pink: #ff3385;
   --hot-pink: #66a310;
+  --main-green: #66a310;
+  --light-green: #84b53f;
   --white: #fff;
   --black: #000;
   --off-black: #1d1d1d;
