--- a/src/client/lazy-app/Compress/Options/Select/style.css
+++ b/src/client/lazy-app/Compress/Options/Select/style.css
@@ -2,35 +2,42 @@
   position: relative;
 }
 
-.builtin-select {
-  background: var(--black);
-  border-radius: 4px;
+.large-builtin-select {
+  border: 1px solid grey;
+  border-radius: 15px;
   font: inherit;
-  padding: 7px 0;
-  padding-right: 25px;
-  padding-left: 10px;
+  padding: 25px 50px;
   -webkit-appearance: none;
   -moz-appearance: none;
-  border: none;
-  color: #fff;
+  color: var(--dim-text);
+  width: 100%;
+}
+.builtin-select {
+  border: 1px solid grey;
+  border-radius: 5px;
+  font: inherit;
+  padding: 5px 25px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  color: var(--dim-text);
   width: 100%;
 }
 
 .arrow {
   position: absolute;
-  right: 8px;
+  right: 10px;
   top: 50%;
   transform: translateY(-50%);
-  fill: #fff;
+  fill: var(--dim-text);
   width: 10px;
   pointer-events: none;
 }
-
-.large {
-  padding: 10px 35px 10px 10px;
-  background: var(--dark-gray);
-
-  & .arrow {
-    right: 13px;
-  }
+.large-input-arrow {
+  position: absolute;
+  right: 30px;
+  top: 50%;
+  transform: translateY(-50%);
+  fill: var(--dim-text);
+  width: 10px;
+  pointer-events: none;
 }
