--- a/src/client/lazy-app/Compress/custom-els/MultiPanel/styles.css
+++ b/src/client/lazy-app/Compress/custom-els/MultiPanel/styles.css
@@ -2,8 +2,7 @@
 }
 
 .panel-content {
-  height: 0px;
-  overflow: auto;
+  height: 100%;
 }
 .panel-content[aria-expanded='true'] {
   height: auto;
