--- a/src/static-build/pages/index/base.css
+++ b/src/static-build/pages/index/base.css
@@ -49,6 +49,9 @@ select,
 textarea {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+a {
+  text-decoration: none;
+}
 
 a,
 button,
@@ -68,9 +71,6 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-
-  /* font: 12px/1.3 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue',
-    Helvetica, Arial, 'Lucida Grande', sans-serif; */
   font: 12px/1.3 'IranSans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   overflow: hidden;
   overscroll-behavior: none;
