--- a/src/client/lazy-app/Compress/Options/Revealer/style.css
+++ b/src/client/lazy-app/Compress/Options/Revealer/style.css
@@ -6,7 +6,7 @@
 .arrow {
   width: 10px;
   height: 10px;
-  fill: var(--white);
+  fill: gray;
   transition: transform 200ms ease;
   transform: rotate(90deg);
 
