--- a/src/shared/prerendered-app/Intro/style.css
+++ b/src/shared/prerendered-app/Intro/style.css
@@ -4,16 +4,10 @@
   overflow: auto;
   overscroll-behavior: contain;
   display: grid;
-  grid-template-rows: 1fr max-content max-content;
+  grid-template-rows: max-content max-content max-content;
   font-size: 1.2rem;
   color: var(--dim-text);
   direction: rtl;
-}
-
-.blob-canvas {
-  composes: abs-fill from global;
-  width: 100%;
-  height: 100%;
 }
 
 .hide {
@@ -22,206 +16,173 @@
 
 .main {
   background-color: white;
-  min-height: 541px;
-  display: grid;
-  grid-template-rows: max-content max-content;
-  justify-items: center;
+  min-height: 500px;
+  flex-direction: column;
+  display: flex;
+  margin: auto;
+  justify-content: center;
   position: relative;
-  --blob-pink: var(--main-green);
-  --center-blob-opacity: 0.3;
 
   @media (min-width: 600px) {
-    min-height: 688px;
+    /* min-height: 688px; */
   }
 }
 
 .logo-container {
-  margin: 5rem 0 1rem;
+  text-align: center;
+  margin-top: 60px;
 }
 
-.logo {
-  transform: translate(-1%, 0);
-  width: 189px;
-  height: auto;
-}
-
-.load-img {
-  position: relative;
-  color: var(--white);
-  font-style: italic;
-  font-size: 1.2rem;
-}
-
-.blob-svg {
-  composes: abs-fill from global;
-  width: 100%;
-  height: 100%;
-  fill: var(--blob-pink);
-
-  & path {
-    opacity: var(--center-blob-opacity);
-  }
-}
-
-.load-img-content {
-  position: relative;
-  --size: 29rem;
-  max-width: var(--size);
-  width: 100vw;
-  height: var(--size);
-  display: grid;
-  grid-template-rows: max-content max-content;
-  justify-items: center;
-  align-content: center;
-  gap: 0.7rem;
+.uploadBox {
+  max-width: 90vw; /* Make it responsive on smaller screens */
+  height: 200px;
+  cursor: pointer;
+  border: 2px dashed grey;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  padding: 25px 0px;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
 
   @media (min-width: 600px) {
-    --size: 36rem;
+    width: 75vw;
   }
 }
 
-.load-btn {
+.selectFileBtn {
   composes: unbutton from global;
+  background-color: var(--deep-blue);
+  color: white;
+  padding: 1.8rem 8rem;
+  font-size: 2rem;
+  font-family: inherit; /* Ensure correct font is used */
+  font-weight: bold;
+  border-radius: 8px;
+  transition: transform 0.2s ease, background-color 0.2s ease;
+
+  &:hover {
+    transform: scale(1.01);
+    background-color: var(--dim-blue);
+  }
 }
 
-.load-icon {
-  --size: 5rem;
-  width: var(--size);
-  height: var(--size);
-  fill: var(--white);
-  transform: translate(4.3%, -1%);
+.dragDropSpan {
+  color: grey;
 }
 
-.paste-btn {
-  composes: unbutton from global;
-  text-decoration: underline;
-  font: inherit;
-  color: inherit;
+.secureSpan {
+  color: grey;
 }
 
-.demos-container {
-  position: relative;
-  background: var(--deep-blue);
-  padding-bottom: 5.2vw;
+.secureDiv {
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
-.top-wave {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 100%;
-}
-
-.main-wave {
-  fill: var(--deep-blue);
-}
-
-.sub-wave {
-  fill: var(--light-blue);
-}
-
-.bottom-wave {
-  position: relative;
+.info-section {
+  margin: auto;
+  margin-top: 100px;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 50px;
+  row-gap: 20px;
+  width: 75vw;
+  display: grid;
 }
 
 .info {
-  background: var(--white);
-  position: relative;
-  padding: 5em 2em;
-
-  @media (min-width: 1200px) {
-    padding: 5em 0;
-  }
-}
-
-.info-container {
-  max-width: 1000px;
-  margin: 0 auto;
-}
-
-.info-content {
-  display: grid;
-  align-items: center;
-  grid-template-columns: 1fr;
-  gap: 1em;
-  grid-template-areas:
-    'text'
-    'img';
-
-  @media (min-width: 712px) {
-    grid-template-columns: 2fr 1fr;
-    grid-template-areas: 'text img';
-    .info:nth-child(even) & {
-      grid-template-areas: 'img text';
-      grid-template-columns: 1fr 2fr;
-    }
-  }
+  text-align: center;
 }
 
 .info-title {
-  color: var(--main-green);
-  font-size: 2.3em;
-  margin: 0;
+  margin: 0px;
+  padding: 6px 0px;
+  font-size: 30px;
+  font-weight: 500;
 }
 
-.info-caption {
-  font-size: 1.5em;
-  line-height: 1.75;
-  margin: 1em 0 0.5em 0;
+.info-content {
+  font-size: 15px;
 }
 
-.info-link {
-  font-size: 1.25em;
-  text-underline-offset: 0.25em;
-  color: var(--off-black);
-  transition: color 400ms ease-in-out;
-  margin-top: 1em;
-  &:hover {
-    color: var(--dim-blue);
-  }
-}
-
-.info-text-wrapper {
+.questionSection {
   display: flex;
-  flex-flow: column wrap;
-  /* max-width: 27em; */
-  width: 85%;
-  justify-self: center;
-  grid-area: text;
-
-  @media (min-width: 712px) {
-    justify-self: start;
-    .info:nth-child(even) & {
-      text-align: right;
-      justify-self: end;
-    }
-  }
+  border: 1px solid grey;
+  width: 80vw;
+  margin: auto;
+  margin-top: 100px;
+  border-radius: 10px;
+  padding: 60px 0px;
+  justify-content: center;
+  gap: 150px;
+  align-items: center;
 }
 
-.info-img-wrapper {
-  grid-area: img;
+.faqSection {
+  width: 75vw;
+  margin: 100px auto;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
-.info-img {
-  display: block;
-  width: 200px;
-  height: auto;
-  /* max-width: 400px; */
-  margin: 0 auto;
-
-  @media (min-width: 768px) {
-    margin: 0 0 0 auto;
-
-    .info:nth-child(even) & {
-      margin: 0;
-    }
-  }
+.faqHeader {
+  font-size: 2.5rem;
+  color: var(--off-black);
+  margin-bottom: 30px;
 }
 
-.info-wave {
-  fill: var(--white);
+.faqItem {
+  border-bottom: 1px solid #e0e0e0;
 }
 
+.faqQuestion {
+  composes: unbutton from global;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: right;
+  padding: 20px 0;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: var(--off-black);
+}
+
+.faqIcon {
+  font-size: 2rem;
+  font-weight: lighter;
+  transition: transform 0.3s ease;
+}
+
+.faqIconOpen {
+  transform: rotate(45deg);
+}
+
+.faqAnswer {
+  overflow: hidden;
+  max-height: 0;
+  opacity: 0;
+  transition: max-height 0.4s ease-out, opacity 0.3s ease-in-out,
+    padding 0.3s ease;
+}
+
+.faqAnswerOpen {
+  max-height: 300px; /* ارتفاع کافی برای نمایش جواب */
+  opacity: 1;
+  padding-bottom: 20px;
+}
+
+.faqAnswer p {
+  font-size: 1.1rem;
+  line-height: 1.8;
+  color: var(--dim-text);
+}
+
+/* بخش فوتر */
 .footer {
   background: var(--white);
   padding-top: 5em;
@@ -232,12 +193,15 @@
   background: var(--light-gray);
 }
 
-.footer-wave {
-  fill: var(--light-gray);
+.top-wave {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 100%;
 }
 
-.content-padding {
-  padding: 2em 0;
+.footer-wave {
+  fill: var(--light-gray);
 }
 
 .footer-padding {
@@ -246,7 +210,6 @@
 
 .footer-items {
   display: grid;
-
   grid-auto-rows: max-content;
   justify-items: center;
   gap: 2rem;
@@ -262,108 +225,4 @@
 .footer-link {
   text-decoration: none;
   color: inherit;
-}
-
-.footer-link-with-logo {
-  composes: footer-link;
-  display: grid;
-  grid-template-columns: 1.8em max-content;
-  align-items: center;
-  gap: 0.6em;
-
-  img {
-    width: 100%;
-    height: auto;
-  }
-}
-
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-}
-
-.install-btn {
-  composes: unbutton from global;
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-  background: var(--deep-blue);
-  border-radius: 0.4em;
-  color: var(--white);
-  padding: 0.5em 1em;
-  font-size: 1.6rem;
-  animation: fade-in 600ms ease-in-out;
-}
-
-.demo-title {
-  color: var(--white);
-  margin: 0;
-  font-size: 2rem;
-  text-align: center;
-}
-
-.demos {
-  display: grid;
-  gap: 3rem;
-  justify-items: center;
-  justify-content: center;
-  padding: 0;
-  margin: 3rem auto;
-  --demo-size: 80px;
-  grid-template-columns: repeat(auto-fit, var(--demo-size));
-
-  @media (min-width: 740px) {
-    --demo-size: 100px;
-    gap: 6rem;
-  }
-
-  & > li {
-    display: block;
-  }
-}
-
-.demo-container {
-  transition: scale 400ms ease-in-out;
-  &:hover {
-    scale: 1.05;
-  }
-}
-
-.demo-size {
-  background: var(--dim-blue);
-  border-radius: 1000px;
-  color: var(--white);
-  width: max-content;
-  padding: 0.5rem 1.2rem;
-  margin: 0.7rem auto 0;
-}
-
-.demo-icon-container {
-  border-radius: var(--demo-size);
-  position: relative;
-  overflow: hidden;
-}
-.demo-icon {
-  width: var(--demo-size);
-  height: var(--demo-size);
-  display: block;
-}
-.demo-loader {
-  composes: abs-fill from global;
-  background: rgba(0, 0, 0, 0.5);
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  animation: fade-in 600ms ease-in-out;
-
-  & > loading-spinner {
-    --color: var(--white);
-  }
-}
-
-.drop-text {
-  @media (max-width: 599px) {
-    display: none;
-  }
 }
