--- a/src/client/lazy-app/Compress/Output/style.css
+++ b/src/client/lazy-app/Compress/Output/style.css
@@ -23,6 +23,7 @@
   height: 100vh;
   border-radius: 20px;
   position: static;
+  touch-action: pan-y;
   @media (min-width: 1000px) {
     width: 60%;
   }
@@ -41,7 +42,7 @@
   align-items: center;
   width: 100%;
   border-radius: 20px;
-  touch-action: pan-y;
+  pointer-events: none;
 }
 
 .pinch-target {
